kings-devops/kings-devops-third-party/kings-devops-kubernetes/install-script/app/app-v1.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-v1
  namespace: kings-ns
  labels:
    app: app
    version: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app
      version: v1
  template:
    metadata:
      labels:
        app: app
        version: v1
    spec:
      containers:
        - name: app-v1
          image: app:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 9090
