kings-devops/kings-devops-third-party/kings-devops-kubernetes/install-script/app/app-v2.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-v2
  namespace: kings-ns
  labels:
    app: app
    version: v2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app
      version: v2
  template:
    metadata:
      labels:
        app: app
        version: v2
    spec:
      containers:
        - name: app-v2
          image: app:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 9090
