kings-devops/kings-devops-third-party/kings-devops-kubernetes/install-script/app/demo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo
  labels:
    app: demo
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 10
      maxUnavailable: 10
  replicas: 1
  template:
    metadata:
      name: demo
      labels:
        app: demo
    spec:
      containers:
        - name: demo
          image: kingslun/demo:latest
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: 128Mi
              cpu: 100m
          lifecycle:
            postStart:
              exec:
                command:
                  - sh
            preStop:
              exec:
                command:
                  - "/bin/bash"
                  - "-c"
                  - "curl 10.181.52.33:8080/index"
      restartPolicy: Always
  selector:
    matchLabels:
      app: demo

---
apiVersion: v1
kind: Service
metadata:
  name: demo
spec:
  selector:
    app: demo
  ports:
    - port: 8080
      nodePort: 30888
  type: NodePort
