kings-devops/kings-devops-third-party/kings-devops-kubernetes/install-script/app/app-networking.yml
apiVersion: v1
kind: Service
metadata:
  namespace: kings-ns
  name: app-svc
  labels:
    app: app
    service: app-svc
spec:
  ports:
    - port: 9090
      targetPort: 9090
      name: http
  selector:
    app: app
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: app-gateway
  namespace: kings-ns
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: app-dr
  namespace: kings-ns
spec:
  host: app-svc
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app-vs
  namespace: kings-ns
spec:
  hosts:
    - "*"
  gateways:
    - app-gateway
  http:
    #    - match:
    #        - uri:
    #            prefix: /app
    - route:
        - destination:
            host: app-svc
            subset: v1
          weight: 50
        - destination:
            host: app-svc
            subset: v2
          weight: 50
