kings-devops/kings-devops-third-party/kings-devops-kubernetes/install-script/app/demo.network.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: app
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app-out
spec:
  hosts:
    - "*"
  gateways:
    - app
  http:
    - route:
        - destination:
            host: app.default.svc.cluster.local
            subset: v1
          weight: 100
